--- a/Catalog/src/components/css/Cart.css
+++ b/Catalog/src/components/css/Cart.css
@@ -41,4 +41,14 @@ section .cart{
 .total h3{
     margin-right: 50px;
     color: crimson;
+    margin-left: 47%;
+    font-size: 40px;
+    margin-bottom: 10px;
+}
+
+.belisek{
+    width: 120px;
+    margin-left: 50%;
+    font-size: 15px;
+    font-weight: bold;
 }
