--- a/list + cart/src/App.css
+++ b/list + cart/src/App.css
@@ -1,17 +1,4 @@
-a {
-  text-decoration: none !important;
-  color: inherit !important;
-}
-
-/* Scroll bar */
-body::-webkit-scrollbar {
-  width: 5px;
-}
-body::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
-
-body::-webkit-scrollbar-thumb {
-  background-color: darkgrey;
-  outline: 1px solid slategrey;
+Link {
+  text-decoration : none !important;
+  color : red !important
 }
